Adding support for projections in Viff.

--- a/src/Makefile
+++ b/src/Makefile
@@ -73,6 +73,7 @@ musketeer: $(addprefix $(OBJ_DIR)/, $(OBJS)) $(addprefix $(SRC_ROOT_DIR)/, $(ANT
 		$(BUILD_DIR)/frameworks/spark_dispatcher.o \
 		$(BUILD_DIR)/frameworks/spark_framework.o \
 		$(BUILD_DIR)/frameworks/viff_framework.o \
+		$(BUILD_DIR)/frameworks/viff_dispatcher.o \
 		$(BUILD_DIR)/frameworks/wildcherry_dispatcher.o \
 		$(BUILD_DIR)/frameworks/wildcherry_framework.o \
 		$(BUILD_DIR)/frontends/beeraph.o \
@@ -96,9 +97,11 @@ musketeer: $(addprefix $(OBJ_DIR)/, $(OBJS)) $(addprefix $(SRC_ROOT_DIR)/, $(ANT
 		$(BUILD_DIR)/ir/max_operator.o \
 		$(BUILD_DIR)/ir/min_operator.o \
 		$(BUILD_DIR)/ir/mul_operator.o \
+		$(BUILD_DIR)/ir/mul_operator_sec.o \
 		$(BUILD_DIR)/ir/project_operator.o \
 		$(BUILD_DIR)/ir/relation.o \
 		$(BUILD_DIR)/ir/select_operator.o \
+		$(BUILD_DIR)/ir/select_operator_sec.o \
 		$(BUILD_DIR)/ir/sub_operator.o \
 		$(BUILD_DIR)/ir/sum_operator.o \
 		$(BUILD_DIR)/ir/sort_operator.o \
