Added secure div operator

--- a/src/Makefile
+++ b/src/Makefile
@@ -91,6 +91,7 @@ musketeer: $(addprefix $(OBJ_DIR)/, $(OBJS)) $(addprefix $(SRC_ROOT_DIR)/, $(ANT
 		$(BUILD_DIR)/ir/difference_operator.o \
 		$(BUILD_DIR)/ir/distinct_operator.o \
 		$(BUILD_DIR)/ir/div_operator.o \
+		$(BUILD_DIR)/ir/div_operator_sec.o \
 		$(BUILD_DIR)/ir/input_operator.o \
 		$(BUILD_DIR)/ir/intersection_operator.o \
 		$(BUILD_DIR)/ir/join_operator.o \
