--- a/src/tests/mindi/Makefile
+++ b/src/tests/mindi/Makefile
@@ -4,6 +4,6 @@ SUFFIX=tests/mindi
 include $(ROOT_DIR)/include/Makefile.config
 include $(ROOT_DIR)/include/Makefile.common
 
-OBJS = netflix.o
+OBJS = test.o
 
 all: .setup $(addprefix $(OBJ_DIR)/, $(OBJS))
