--- a/src/base/Makefile
+++ b/src/base/Makefile
@@ -4,7 +4,7 @@ SUFFIX=base
 include $(ROOT_DIR)/include/Makefile.config
 include $(ROOT_DIR)/include/Makefile.common
 
-OBJS = utils.o hdfs_utils.o
+OBJS = utils.o hdfs_utils.o ir_utils.o
 
 PBS = job_run.pb.o job.pb.o
 
