Cleaned up visualization and changed output format to json.

--- a/src/mpc/Makefile
+++ b/src/mpc/Makefile
@@ -4,6 +4,6 @@ SUFFIX=mpc
 include $(ROOT_DIR)/include/Makefile.config
 include $(ROOT_DIR)/include/Makefile.common
 
-OBJS = dag_rewriter_mpc.o obligation.o environment.o
+OBJS = dag_rewriter_mpc.o obligation.o environment.o state_translator.o
 
 all: $(addprefix $(OBJ_DIR)/, $(OBJS)) .setup
